@@ -1,5 +1,6 @@
 *.erbc
 *~
+/api/*
 /gems/*
 /run/bbs_data.pstore
 /run/bin/gluon_local
